dist_man_MANS = \
	hesiod.3
	hesiod.conf.5 \
	hesiod_end.3 \
	hesiod_free_list.3 \
	hesiod_free_passwd.3 \
	hesiod_free_postoffice.3 \
	hesiod_free_servent.3 \
	hesiod_free_string.3 \
	hesiod_getmailhost.3 \
	hesiod_getpwnam.3 \
	hesiod_getpwuid.3 \
	hesiod_getservbyname.3 \
	hesiod_init.3 \
	hesiod_parse_result.3 \
	hesiod_resolve.3 \
	hesiod_to_bind.3 \
	hesinfo.1
